added some robustness when collecting the input, particulary null input(untested), blank input (untested), non-numeric characters